// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CertificateItemDetails renders item with negative match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        Some description
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": "0x53f8ee8944a01238e0f265ccb10e88ab8c5dcaf639ac0fed7e4604a8d026eee4",
            "value": "Some description",
          },
          "id": "0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc",
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": "0x8c12a32ac7fb5bbdd99cd46750008765f7dfec4cae71fab62ed502ea03bb4c8a",
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": "0x4c1029697ee358715d3a14a2add817c4b01651440de808371f78165ac90dc581",
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with positive match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={true}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        Some description
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": "0x53f8ee8944a01238e0f265ccb10e88ab8c5dcaf639ac0fed7e4604a8d026eee4",
            "value": "Some description",
          },
          "id": "0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc",
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": "0x8c12a32ac7fb5bbdd99cd46750008765f7dfec4cae71fab62ed502ea03bb4c8a",
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": "0x4c1029697ee358715d3a14a2add817c4b01651440de808371f78165ac90dc581",
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, no token and hidden restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        Some description
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": "0x53f8ee8944a01238e0f265ccb10e88ab8c5dcaf639ac0fed7e4604a8d026eee4",
            "value": "Some description",
          },
          "id": "0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc",
          "restrictedDelivery": false,
          "token": undefined,
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, no token and no restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        Some description
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      No
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": "0x53f8ee8944a01238e0f265ccb10e88ab8c5dcaf639ac0fed7e4604a8d026eee4",
            "value": "Some description",
          },
          "id": "0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc",
          "restrictedDelivery": false,
          "token": undefined,
        }
      }
    />
  </Row>
</React.Fragment>
`;

exports[`CertificateItemDetails renders item with undefined match, token and restricted delivery 1`] = `
<React.Fragment>
  <Row>
    <CertificateDateTimeCell
      dateTime="2022-10-12T10:13:00.000Z"
      label="Collection item timestamp:"
      md={6}
    />
    <CertificateCell
      label="Collection item identification:"
      matched={false}
      md={6}
    >
      0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Collection item description:"
      md={12}
    >
      <pre>
        Some description
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Restricted delivery:"
      md={12}
    >
      Yes
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Type:"
      md={4}
    >
      owner
    </CertificateCell>
    <CertificateCell
      label="Underlying Token ID:"
      md={8}
    >
      <pre>
        0x900edc98db53508e6742723988b872dd08cd09c2
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <CertificateCell
      label="Underlying Token Issuance:"
    >
      <pre>
        1
      </pre>
    </CertificateCell>
  </Row>
  <Row>
    <TermsAndConditions
      item={
        Object {
          "addedOn": "2022-10-12T10:13:00.000Z",
          "description": HashString {
            "hash": "0x53f8ee8944a01238e0f265ccb10e88ab8c5dcaf639ac0fed7e4604a8d026eee4",
            "value": "Some description",
          },
          "id": "0x9aaebbbd3f8fe651b87e83630455a70a43964c6991077bb450bf1a3ed2d25ccc",
          "restrictedDelivery": true,
          "token": Object {
            "id": HashString {
              "hash": "0x8c12a32ac7fb5bbdd99cd46750008765f7dfec4cae71fab62ed502ea03bb4c8a",
              "value": "0x900edc98db53508e6742723988b872dd08cd09c2",
            },
            "issuance": 1n,
            "type": HashString {
              "hash": "0x4c1029697ee358715d3a14a2add817c4b01651440de808371f78165ac90dc581",
              "value": "owner",
            },
          },
        }
      }
    />
  </Row>
</React.Fragment>
`;
